--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
+    "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4"
   }
 }
