--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
     "gulp": "^3.9.1",
-    "gulp-gh-pages": "^0.5.4"
+    "gulp-connect": "^5.0.0",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-rev": "^7.1.2"
   }
 }
