set Git credentials for Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ branches:
     - master
 
 before_script:
+  - git config --global user.email "travis@devternity.com"
+  - git config --global user.name "Travis"  
   - npm install -g gulp-cli
 
 script:
