--- a/package.json
+++ b/package.json
@@ -13,16 +13,15 @@
     "gulp-connect": "^5.0.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^4.1.0",
+    "gulp-newer": "^1.4.0",
     "gulp-purgecss": "^0.20.0",
-    "gulp-rev": "^7.1.2",
+    "html-to-text": "^4.0.0",
+    "ics": "^2.4.1",
     "run-sequence": "^2.2.1"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
-    "fs-readfile-promise": "^3.0.0",
-    "gulp-data": "^1.2.1",
     "gulp-if": "^2.0.2",
-    "gulp-ignore": "^2.0.2",
     "gulp-pug": "^3.3.0",
     "gulp-pug2": "^0.0.2",
     "lodash": "^4.17.4",
