--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
+    "gh-pages": "^2.0.1",
     "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
-    "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^4.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-purgecss": "^0.20.0",
